[package]
name = "runst"
version = "0.2.0" # bumped by release.sh
description = "A dead simple notification daemon 🦡"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/runst"
repository = "https://github.com/orhun/runst"
keywords = ["notification", "daemon", "dbus", "notify", "x11"]
categories = ["command-line-utilities"]
include = [
  "src/**/*",
  "config/*",
  "build.rs",
  "Cargo.*",
  "LICENSE-*",
  "*.md",
]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
zbus = "5.15"
zvariant = "5"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures-util = "0.3"
x11rb = { version = "0.13.2", default-features = false, features = [
  "allow-unsafe-code",
], optional = true }
cairo-rs = { version = "0.22.0", default-features = false, features = [
  "use_glib",
], optional = true }
pangocairo = { version = "0.22.0", optional = true }
pango = { version = "0.22.6", optional = true }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
sscanf = "0.5.0"
colorsys = "0.7.3"
dirs = "6.0.0"
rust-embed = { version = "8.11.0", features = ["compression"] }
tera = "1.20.1"
estimated_read_time = "1.0.0"
regex = "1.12.3"
serde_regex = "1.1.0"
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
humantime = "2.3.0"
smithay-client-toolkit = { version = "0.20.0", optional = true }
wayland-client = { version = "0.31.14", optional = true }
wayland-protocols-wlr = { version = "0.3.9", optional = true }
calloop = { version = "0.14.4", optional = true }
calloop-wayland-source = { version = "0.4.1", optional = true }

[features]
default = ["x11", "wayland"]
x11 = ["dep:cairo-rs", "cairo-rs/xcb", "dep:pango", "dep:pangocairo", "dep:x11rb"]
wayland = [
  "dep:cairo-rs",
  "dep:pango",
  "dep:pangocairo",
  "dep:calloop",
  "dep:calloop-wayland-source",
  "dep:smithay-client-toolkit",
  "dep:wayland-client",
  "dep:wayland-protocols-wlr",
]
calloop = ["dep:calloop"]
calloop-wayland-source = ["dep:calloop-wayland-source"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
